--- a/surrealdb/Chart.yaml
+++ b/surrealdb/Chart.yaml
@@ -7,5 +7,5 @@ version: 0.1.0
 appVersion: "1.16.0"
 dependencies:
   - repository: https://charts.pingcap.org/
-    name: tikv-operator
-    version: v0.1.0
+    name: tidb-operator
+    version: v1.3.9
