fix: workaround space reserve fails
https://github.com/tikv/tikv/issues/12543

--- a/surrealdb/templates/tidb-cluster.yaml
+++ b/surrealdb/templates/tidb-cluster.yaml
@@ -24,5 +24,7 @@ spec:
     replicas: {{ ((.Values.replicas).tidb).tikv | default 3 }}
     requests:
       storage: "1Gi"
-    config: ''
+    config:
+      storage:
+        reserve-space: 0
 
