fix: tikv config in TOML format

--- a/surrealdb/templates/tidb-cluster.yaml
+++ b/surrealdb/templates/tidb-cluster.yaml
@@ -24,7 +24,7 @@ spec:
     replicas: {{ ((.Values.replicas).tidb).tikv | default 3 }}
     requests:
       storage: "1Gi"
-    config:
-      storage:
-        reserve-space: "0"
+    config: |
+      [storage]
+        reserve-space = "0"
 
