--- a/templates/surrealdb.yaml
+++ b/templates/surrealdb.yaml
@@ -1,3 +1,45 @@
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   labels:
+#     app: surrealdb
+#   name: surrealdb
+# spec:
+#   replicas: {{ .Values.replicas.surrealdb | default 1 }}
+#   selector:
+#     matchLabels:
+#       app: surrealdb
+#   template:
+#     metadata:
+#       labels:
+#         app: surrealdb
+#     spec:
+#       containers:
+#         - args:
+#             - start
+#             - --log=trace
+#             - --user={{ .Values.surrealdb.user | default "root" }}
+#             - --pass={{ .Values.surrealdb.pass | default "root" }}
+#             - tikv://{{ .Values.tikv.name | default "surreal-tikv" }}-pd:2379
+#           image: surrealdb/surrealdb:latest
+#           name: surrealdb
+#           ports:
+#             - containerPort: 8000
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   labels:
+#     app: surrealdb
+#   name: surrealdb
+# spec:
+#   ports:
+#     - name: "surreal-rpc"
+#       port: 8000
+#       targetPort: 8000
+#   selector:
+#     app: surrealdb
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -5,6 +47,7 @@ metadata:
   labels:
     app: surrealdb
   name: surrealdb
+  namespace: {{ .Release.Namespace }} # Added namespace support
 spec:
   replicas: {{ .Values.replicas.surrealdb | default 1 }}
   selector:
@@ -18,14 +61,21 @@ spec:
       containers:
         - args:
             - start
-            - --log=trace
+            - --log={{ .Values.surrealdb.logging.level | default "trace" }} # Added configurable log level
             - --user={{ .Values.surrealdb.user | default "root" }}
             - --pass={{ .Values.surrealdb.pass | default "root" }}
-            - tikv://{{ .Values.tikv.name | default "surreal-tikv" }}-pd:2379
-          image: surrealdb/surrealdb:latest
+            - tikv://{{ .Values.tikv.name | default "surreal-tikv" }}-pd.{{ .Release.Namespace }}.svc.cluster.local:2379 # Added namespace support
+          image: surrealdb/surrealdb:{{ .Values.surrealdb.image.tag | default "latest" }} # Added configurable image tag
           name: surrealdb
           ports:
             - containerPort: 8000
+          resources: # Added configurable resource limits and requests
+            limits:
+              cpu: {{ .Values.surrealdb.resources.limits.cpu | default "100m" }}
+              memory: {{ .Values.surrealdb.resources.limits.memory | default "128Mi" }}
+            requests:
+              cpu: {{ .Values.surrealdb.resources.requests.cpu | default "50m" }}
+              memory: {{ .Values.surrealdb.resources.requests.memory | default "64Mi" }}
 ---
 apiVersion: v1
 kind: Service
@@ -33,6 +83,7 @@ metadata:
   labels:
     app: surrealdb
   name: surrealdb
+  namespace: {{ .Release.Namespace }} # Added namespace support
 spec:
   ports:
     - name: "surreal-rpc"
