--- a/templates/surrealdb.yaml
+++ b/templates/surrealdb.yaml
@@ -1,45 +1,3 @@
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   labels:
-#     app: surrealdb
-#   name: surrealdb
-# spec:
-#   replicas: {{ .Values.replicas.surrealdb | default 1 }}
-#   selector:
-#     matchLabels:
-#       app: surrealdb
-#   template:
-#     metadata:
-#       labels:
-#         app: surrealdb
-#     spec:
-#       containers:
-#         - args:
-#             - start
-#             - --log=trace
-#             - --user={{ .Values.surrealdb.user | default "root" }}
-#             - --pass={{ .Values.surrealdb.pass | default "root" }}
-#             - tikv://{{ .Values.tikv.name | default "surreal-tikv" }}-pd:2379
-#           image: surrealdb/surrealdb:latest
-#           name: surrealdb
-#           ports:
-#             - containerPort: 8000
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   labels:
-#     app: surrealdb
-#   name: surrealdb
-# spec:
-#   ports:
-#     - name: "surreal-rpc"
-#       port: 8000
-#       targetPort: 8000
-#   selector:
-#     app: surrealdb
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -62,11 +20,26 @@ spec:
         - args:
             - start
             - --log={{ .Values.surrealdb.logging.level | default "trace" }} # Added configurable log level
-            - --user={{ .Values.surrealdb.user | default "root" }}
-            - --pass={{ .Values.surrealdb.pass | default "root" }}
+            - --user=$(SURREALDB_USER)
+            - --pass=$(SURREALDB_PASS)
+            # - --user={{ .Values.surrealdb.user | default "root" }}
+            # - --pass={{ .Values.surrealdb.pass | default "root" }}
             - tikv://{{ .Values.tikv.name | default "surreal-tikv" }}-pd.{{ .Release.Namespace }}.svc.cluster.local:2379 # Added namespace support
           image: surrealdb/surrealdb:{{ .Values.surrealdb.image.tag | default "latest" }} # Added configurable image tag
           name: surrealdb
+          env:
+            - name: SURREALDB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.surrealdb.secretFileName | default "surrealdb-secret" }}-credentials
+                  key: username
+            - name: SURREALDB_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.surrealdb.secretFileName | default "surrealdb-secret" }}-credentials
+                  key: password
+
+          
           ports:
             - containerPort: 8000
           resources: # Added configurable resource limits and requests
