--- a/values.yaml
+++ b/values.yaml
@@ -1,17 +1,21 @@
-targetNamespace: my-app
+hooks:
+  post-install:
+    enabled: true # don't change, use it to copy the secret to your web application namespace
+appName: surrealdb
+targetNamespace: my-app # namespace where the secret will be copied to, useful in your web application namespace
 surrealdb:
   secretFileName: surrealdb-secret
   # user: root # optional, the chart will generate random user if not set
   # password: root # optional, the chart will generate random password if not set
   image:
-    tag: latest
+    tag: latest # optional, default to latest
   logging:
-    level: trace
+    level: trace # optional, default to info
   ingress:
-    enabled: false
+    enabled: false # optional, default to false
     annotations:
-      kubernetes.io/ingress.class: nginx
-      cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/ingress.class: nginx # optional, default to nginx
+      cert-manager.io/cluster-issuer: letsencrypt-prod # optional, cert-manager cluster issuer name
     host: ~
   resources:
     limits:
@@ -23,7 +27,7 @@ surrealdb:
 
 tikv:
   name: surreal-tikv
-  storage: 10Gi
+  storage: 1Gi # optional, default to 1Gi storage for tikv data
   resources:
     limits:
       cpu: 1000m
@@ -31,9 +35,9 @@ tikv:
     requests:
       cpu: 500m
       memory: 1Gi
-  storageClassName: longhorn
+  storageClassName: standard # optional, default to standard, tested with longhorn and standard, 
 replicas:
   tidb:
-    pd: 3
-    tikv: 3
-  surrealdb: 2
+    pd: 3 # optional, default to 3
+    tikv: 3 # optional, default to 3
+  surrealdb: 2 # optional, default to 2
